# agent-session-manager

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  help.md
docs/plans/: 2026-02-08-ratatui-tui-implementation.md  2026-02-25-ui-e2e-tests.md  2026-02-25-ui-shortcuts-trash-design.md  2026-02-25-ui-shortcuts-trash-impl.md
src/: app.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  store.rs  ui.rs
src/snapshots/: agent_session_manager__ui__tests__snapshot_delete_confirm.snap  agent_session_manager__ui__tests__snapshot_help_modal.snap  agent_session_manager__ui__tests__snapshot_initial_render.snap  agent_session_manager__ui__tests__snapshot_loading_progress.snap  agent_session_manager__ui__tests__snapshot_search_with_filter.snap  agent_session_manager__ui__tests__snapshot_settings_modal.snap  agent_session_manager__ui__tests__snapshot_trash_tab.snap
tests/: e2e.rs  e2e_runner.rs  integration.rs
tests/common/: mod.rs
tests/e2e/: helpers.ts  mouse-poc.test.ts  package-lock.json  package.json  sessions.test.ts  tsconfig.json  tui-test.config.ts
