[package]
name = "agent-session-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "agent-session-manager"
path = "src/main.rs"
